--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
 # Include the license file
 include LICENSE.txt
 
-include mac2vendors/vendors.json
-include mac2vendors/vendors.txt
+# include mac2vendors/vendors.json
+# include mac2vendors/vendors.txt
 
 # Include the data files
 recursive-include data *
